public class Clientes extends PessoaJuridica {

	private Clientes codCliente;

	private double limiteCredito;

	private boolean ativo;

	public double getLimite() {
		return 0;
	}

	public boolean getAtivo() {
		return false;
	}

	public String cadastrarCliente() {
		return null;
	}

	public String editarDados() {
		return null;
	}

}
